# iced-editor

./: Cargo.toml  README.md  README.zh-CN.md
src/: main.rs
test/: test.cpp
