[package]
name = "iced-editor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A simple text editor built with Iced"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "refs/tags/text-editor", features = [
    "debug", # after `cargo run`, press f12 to see the debug window
    "highlighter", # syntax highlighting
] }

tokio = { version = "1.32", features = ["fs"] }
rfd = "0.12.0"
